--- a/module3/.vscode/settings.json
+++ b/module3/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "cardetails",
-        "makesound"
+        "Humba",
+        "Humbaaaaa",
+        "makesound",
+        "Meowwwwww"
     ]
 }
