`Refactor Counter class to use static properties and methods`

--- a/module3/.vscode/settings.json
+++ b/module3/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Humba",
         "Humbaaaaa",
         "makesound",
-        "Meowwwwww"
+        "Meowwwwww",
+        "propertyname"
     ]
 }
